force-app/main/default/objects/Case/fields/Tipo_servico__c.field-meta.xml
<CustomField>
    <fullName>Tipo_servico__c</fullName>
    <label>Tipo de serviço técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instalação</fullName>
            </value>
            <value>
                <fullName>Revisão</fullName>
            </value>
            <value>
                <fullName>Desinstalação</fullName>
                <label>Desinstação</label>
            </value>
            <value>
                <fullName>Prova Piloto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>