force-app/main/default/objects/Case/fields/Trabalhador_por__c.field-meta.xml
<CustomField>
    <fullName>Trabalhador_por__c</fullName>
    <label>Trabalhador por</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executivo</fullName>
            </value>
            <value>
                <fullName>Televendas + Executivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>