force-app/main/default/objects/Case/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>