force-app/main/default/objects/Case/recordTypes/Contesta_es.recordType-meta.xml
<RecordType>
    <fullName>Contesta_es</fullName>
    <active>true</active>
    <businessProcess>Contestações</businessProcess>
    <label>Contestações</label>
</RecordType>