force-app/main/default/objects/Case/recordTypes/Juridico.recordType-meta.xml
<RecordType>
    <fullName>Juridico</fullName>
    <active>true</active>
    <businessProcess>Ouvidoria</businessProcess>
    <label>Jurídico</label>
</RecordType>