force-app/main/default/objects/Case/recordTypes/Mexico.recordType-meta.xml
<RecordType>
    <fullName>Mexico</fullName>
    <active>true</active>
    <businessProcess>México</businessProcess>
    <label>México</label>
</RecordType>