force-app/main/default/objects/Case/recordTypes/Neoway.recordType-meta.xml
<RecordType>
    <fullName>Neoway</fullName>
    <active>true</active>
    <businessProcess>Solicitação de Leads Neoway</businessProcess>
    <label>Neoway</label>
</RecordType>