force-app/main/default/objects/Case/recordTypes/Procon.recordType-meta.xml
<RecordType>
    <fullName>Procon</fullName>
    <active>true</active>
    <businessProcess>Ouvidoria</businessProcess>
    <label>Procon</label>
</RecordType>