force-app/main/default/objects/Case/recordTypes/Reclamacao.recordType-meta.xml
<RecordType>
    <fullName>Reclamacao</fullName>
    <active>true</active>
    <businessProcess>Ouvidoria</businessProcess>
    <label>Reclamação</label>
</RecordType>