force-app/main/default/objects/Case/recordTypes/Transferencia_de_Titularidade.recordType-meta.xml
<RecordType>
    <fullName>Transferencia_de_Titularidade</fullName>
    <active>true</active>
    <businessProcess>Ouvidoria</businessProcess>
    <label>Transferência de Titularidade</label>
</RecordType>