force-app/main/default/objects/Case/validationRules/CNPF_regra_que_valida_se_e_valido.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPF_regra_que_valida_se_e_valido</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
LEN(CNPJ_CPF__c)=14,
NOT( 
OR(
CONTAINS(CNPJ_CPF__c, &#39;.&#39;), 
LEN(CNPJ_CPF__c)=0, 
AND( NOT(CNPJ_CPF__c = &quot;00000000000000&quot;), 
MOD(MOD(11-MOD(VALUE(MID(CNPJ_CPF__c,1,1))*5+VALUE(MID(CNPJ_CPF__c,2,1))*4+VALUE(MID(CNPJ_CPF__c,3,1))*3+VALUE(MID(CNPJ_CPF__c,4,1))*2+VALUE(MID(CNPJ_CPF__c,5,1))*9+VALUE(MID(CNPJ_CPF__c,6,1))*8+VALUE(MID(CNPJ_CPF__c,7,1))*7+VALUE(MID(CNPJ_CPF__c,8,1))*6+VALUE(MID(CNPJ_CPF__c,9,1))*5+VALUE(MID(CNPJ_CPF__c,10,1))*4+VALUE(MID(CNPJ_CPF__c,11,1))*3+VALUE(MID(CNPJ_CPF__c,12,1))*2,11),11),10) = 
VALUE(MID(CNPJ_CPF__c,13,1)), 
MOD(MOD(11-MOD(VALUE(MID(CNPJ_CPF__c,1,1))*6+VALUE(MID(CNPJ_CPF__c,2,1))*5+VALUE(MID(CNPJ_CPF__c,3,1))*4+VALUE(MID(CNPJ_CPF__c,4,1))*3+VALUE(MID(CNPJ_CPF__c,5,1))*2+VALUE(MID(CNPJ_CPF__c,6,1))*9+VALUE(MID(CNPJ_CPF__c,7,1))*8+VALUE(MID(CNPJ_CPF__c,8,1))*7+VALUE(MID(CNPJ_CPF__c,9,1))*6+VALUE(MID(CNPJ_CPF__c,10,1))*5+VALUE(MID(CNPJ_CPF__c,11,1))*4+VALUE(MID(CNPJ_CPF__c,12,1))*3+VALUE(MID(CNPJ_CPF__c,13,1))*2,11),11),10) = 
VALUE(MID(CNPJ_CPF__c,14,1)) 
)))
)</errorConditionFormula>
    <errorDisplayField>CNPJ_CPF__c</errorDisplayField>
    <errorMessage>CNPJ inválido</errorMessage>
</ValidationRule>