force-app/main/default/objects/Case/validationRules/data_resposta_deve_estar_preenchida.validationRule-meta.xml
<ValidationRule>
    <fullName>data_resposta_deve_estar_preenchida</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK( DataFinalizacaoResposta__c ),
 NOT(ISBLANK( DataFinalizacaoAcaoSolucao__c ) )
)</errorConditionFormula>
    <errorDisplayField>DataFinalizacaoAcaoSolucao__c</errorDisplayField>
    <errorMessage>Finalize a data de reposta antes de finalizar a data de solução</errorMessage>
</ValidationRule>