force-app/main/default/objects/Case/validationRules/email_ou_telefone_obrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>email_ou_telefone_obrigatorios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.Name = &#39;Reclamação&#39;,
 ISBLANK(EmailCliente__c),
 ISBLANK( TelefoneCliente__c )
)</errorConditionFormula>
    <errorMessage>Pelo menos uma forma de contato é obrigatória, entre email e telefone</errorMessage>
</ValidationRule>