force-app/main/default/objects/Case/validationRules/MarcoSolucaoSLA.validationRule-meta.xml
<ValidationRule>
    <fullName>MarcoSolucaoSLA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(  DataFinalizacaoAcaoSolucao__c ),
 OR(
  DataFinalizacaoAcaoSolucao__c &lt;  ( NOW() - (2/1440) ),
  DataFinalizacaoAcaoSolucao__c &gt;  ( NOW() + (3/24) )
 )
)</errorConditionFormula>
    <errorDisplayField>DataFinalizacaoAcaoSolucao__c</errorDisplayField>
    <errorMessage>A data de finalização da solução não pode ser retroativa ou futura</errorMessage>
</ValidationRule>