force-app/main/default/objects/Case/validationRules/MX_Alteracao_Proprietario.validationRule-meta.xml
<ValidationRule>
    <fullName>MX_Alteracao_Proprietario</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Comentarios_adicionados__c = false,
 NOT(ISNULL(Comentarios_Internos__c)),
 ISCHANGED( OwnerId ),
 RecordType.DeveloperName = &quot;Mexico&quot;
)</errorConditionFormula>
    <errorMessage>Para alterar o proprietário você deve inserir um comentário na seção &quot;Comentários Internos&quot;.</errorMessage>
</ValidationRule>