force-app/main/default/objects/Case/validationRules/MX_Caso_Criado_Com_Motivo.validationRule-meta.xml
<ValidationRule>
    <fullName>MX_Caso_Criado_Com_Motivo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;Mexico&#39;,
ISNEW(),
NOT(ISPICKVAL(Reason, &#39;&#39;))
)</errorConditionFormula>
    <errorDisplayField>Reason</errorDisplayField>
    <errorMessage>Por favor, coloque un motivo justo después de que se cree el caso.</errorMessage>
</ValidationRule>