force-app/main/default/objects/Case/validationRules/MX_Motivo_Cancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>MX_Motivo_Cancelamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &quot;Mexico&quot;, 
ISPICKVAL(Reason , &quot;Cancelación Servicio o NUID&quot;), 
ISPICKVAL(Motivo_cancelamento__c,&quot;&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Motivo_cancelamento__c</errorDisplayField>
    <errorMessage>Favor preencher o motivo do cancelamento.</errorMessage>
</ValidationRule>