force-app/main/default/objects/Case/validationRules/MX_Preencher_Pendencia.validationRule-meta.xml
<ValidationRule>
    <fullName>MX_Preencher_Pendencia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;Mexico&quot;,
 ISPICKVAL(Status , &quot;Pendente&quot;),
 ISBLANK(Pendencia__c)
)</errorConditionFormula>
    <errorDisplayField>Pendencia__c</errorDisplayField>
    <errorMessage>Preencha a pendência para poder salvar o registro.</errorMessage>
</ValidationRule>