force-app/main/default/objects/Case/validationRules/Nao_atualiza_caso_fechado.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_atualiza_caso_fechado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( PRIORVALUE(Status) ,&quot;Finalizado&quot;),
ISPICKVAL( PRIORVALUE(Status) ,&quot;Cancelado&quot;)
),
OR(
ISCHANGED( Cliente_Sascar__c ),
ISCHANGED( AccountId ),
ISCHANGED( SolucaoSegmento__c ),
ISCHANGED( Subject ),
ISCHANGED( Priority ),
ISCHANGED( Origin ),
ISCHANGED( SubOrigem__c),
ISCHANGED( MotivoReclamacao__c ),
ISCHANGED( Description ),
ISCHANGED( Placa__c ),
ISCHANGED( NProtocoloAtendimento__c),
ISCHANGED( NOS__c),
ISCHANGED( OwnerId ),
ISCHANGED( StatusResposta__c ),
ISCHANGED( StatusSolucao__c ),
ISCHANGED( AcaoRespostaReclamacao__c ),
ISCHANGED( AcaoSolucaoReclamacao__c ),
ISCHANGED( DataFinalizacaoResposta__c ),
ISCHANGED( DataFinalizacaoAcaoSolucao__c ),
ISCHANGED( CausaReclamacao__c ),
ISCHANGED( DetalheCausaReclamacao__c ),
ISCHANGED( CustoReclamacao__c ),
ISCHANGED( Procedencia__c ),
ISCHANGED( ConclusaoReclamacao__c ),
ISCHANGED( ResponsavelOuvidoria__c ),
ISCHANGED( RecordTypeId ),
ISCHANGED( ParentId ),
ISCHANGED( NomeCliente__c ),
ISCHANGED( CodProcesso__c ),
ISCHANGED( DataConclusao__c ),
ISCHANGED( StatusProcesso__c )
)
)</errorConditionFormula>
    <errorMessage>Não é permitido atualizar casos fechados</errorMessage>
</ValidationRule>