force-app/main/default/objects/Case/validationRules/Se_cliente_sascar_CPF_obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Se_cliente_sascar_CPF_obrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Cliente_Sascar__c = true,
 ISBLANK( CNPJ_CPF__c )
)</errorConditionFormula>
    <errorDisplayField>CNPJ_CPF__c</errorDisplayField>
    <errorMessage>Para cliente Sascar, o CNPJ/CPF é obrigatório.</errorMessage>
</ValidationRule>