force-app/main/default/objects/Case/validationRules/somente_ouvidoria_finaliza_caso.validationRule-meta.xml
<ValidationRule>
    <fullName>somente_ouvidoria_finaliza_caso</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &#39;Ouvidoria&#39;,
 RecordType.Name &lt;&gt; &#39;Jurídico&#39;,
 RecordType.Name &lt;&gt; &#39;Procon&#39;,
 OR(
  ISPICKVAL( Status, &#39;Finalizado&#39;),
  ISPICKVAL( Status, &#39;Cancelado&#39;)
 )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Somente a Ouvidoria pode finalizar/cancelar casos</errorMessage>
</ValidationRule>