force-app/main/default/objects/Case/listViews/Ac_ouvidoria_filtro_Ate.listView-meta.xml
<ListView>
    <fullName>Ac_ouvidoria_filtro_Ate</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ResponsavelOuvidoria__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Novo,Não iniciado</value>
    </filters>
    <label>Ac ouvidoria filtro Ate</label>
    <language>pt_BR</language>
    <queue>Ouvidoria2</queue>
    <sharedTo>
        <group>ATENDIMENTO</group>
    </sharedTo>
</ListView>