force-app/main/default/objects/Case/listViews/Activos_en_Administrador_de_SIM.listView-meta.xml
<ListView>
    <fullName>Activos_en_Administrador_de_SIM</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Fechado,Finalizado,Cancelado</value>
    </filters>
    <label>Activos en Administrador de SIM</label>
    <language>pt_BR</language>
    <queue>MX_Administracao_de_SIMs</queue>
    <sharedTo>
        <group>MEXICO</group>
    </sharedTo>
</ListView>